--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ authors = ["Jelle Besseling <jelle@pingiun.com>"]
 futures = "0.1.14"
 hyper = "0.11.2"
 trust-dns-resolver = "^0.8"
+tokio-core = "0.1.16"
+log = "0.4.1"
+env_logger = "0.5.6"
