--- a/deploy.yaml
+++ b/deploy.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: redirector
-        image: eu.gcr.io/telegram-bots-179510/redirector
+        image: pingiun/redirector
         env:
         - name: LISTEN_ADDR
           value: 0.0.0.0:9376
@@ -25,15 +25,3 @@ spec:
           value: main=info
         ports:
         - containerPort: 9376
----
-kind: Service
-apiVersion: v1
-metadata:
-  name: redirector-service
-spec:
-  selector:
-    app: redirector
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 9376
