--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,9 @@ authors = ["Jelle Besseling <jelle@pingiun.com>"]
 
 [dependencies]
 futures = "0.1.14"
-hyper = "0.11.2"
-trust-dns-resolver = "^0.8"
+hyper = "0.12.8"
+trust-dns-resolver = "0.10.0-alpha.2"
 tokio-core = "0.1.16"
 log = "0.4.1"
-env_logger = "0.5.6"
+pretty_env_logger = "*"
+regex = "1.0.0"
