--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "redirector"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Jelle Besseling <jelle@pingiun.com>"]
 
 [dependencies]
 futures = "0.1.14"
 hyper = "0.12.8"
-trust-dns-resolver = "0.10.0-alpha.2"
+trust-dns-resolver = "0.10.2"
 tokio-core = "0.1.16"
-log = "0.4.1"
-pretty_env_logger = "*"
-regex = "1.0.0"
+log = "0.4.6"
+pretty_env_logger = "0.3.0"
+regex = "1.1.0"
